--- a/PartBench/MainPage.xaml
+++ b/PartBench/MainPage.xaml
@@ -14,7 +14,7 @@
         <Thickness x:Key="NavigationViewHeaderMargin">50,50</Thickness>
     </Page.Resources>
 
-    <Grid>
+    <Grid x:Name="MainGrid">
         <!--Rows Title Bar | Everything Else-->
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -22,7 +22,7 @@
         </Grid.RowDefinitions>
 
         <!--Nav Bar | Left-->
-        <muxc:NavigationView CompactModeThresholdWidth="0" Header="Home" Background="#3d3d3d" x:Name="NavView" Grid.RowSpan="2" IsTitleBarAutoPaddingEnabled="False" IsBackEnabled="True" BackRequested="NavView_BackRequested" OpenPaneLength="300" PaneClosing="NavView_PaneClosing" PaneOpening="NavView_PaneOpening">
+        <muxc:NavigationView CompactModeThresholdWidth="0" Header="Home" Background="#3d3d3d" x:Name="NavView" Grid.RowSpan="2" IsTitleBarAutoPaddingEnabled="False" IsBackEnabled="True" BackRequested="NavView_BackRequested" OpenPaneLength="300">
             <muxc:NavigationView.MenuItems>
                 <muxc:NavigationViewItem x:Name="NavItemHome" Tag="Home" Icon="Home" Content="Home" Tapped="NavItemHome_Tapped"/>
                 <muxc:NavigationViewItemSeparator/>
@@ -38,6 +38,9 @@
                 <muxc:NavigationViewItem x:Name="NavItemFAQPage" Tag="FAQ/About" Icon="Edit" Content="FAQ / About" Tapped="NavItemFAQPage_Tapped"/>
                 <muxc:NavigationViewItem x:Name="NavItemForumsPage" Tag="Forums" Icon="Emoji2" Content="Forums" Tapped="NavItemForumsPage_Tapped"/>
             </muxc:NavigationView.MenuItems>
+            <muxc:NavigationView.Content>
+                <Frame x:Name="ContentContainer" Margin="50,0"/>
+            </muxc:NavigationView.Content>
         </muxc:NavigationView>
 
         <!--Title bar set as draggable area-->
@@ -51,8 +54,6 @@
             <Image Grid.Column="1" Source="/Assets/PBLogo.png" Height="24" Margin="40,10,0,0" HorizontalAlignment="Left"/>
         </Grid>
 
-        <Frame x:Name="ContentContainer" Grid.Row="1" Margin="350,50,20,20">
-            
-        </Frame>
+       
     </Grid>
 </Page>
